feat: add texts in index and change tailwind postcss config

--- a/package.json
+++ b/package.json
@@ -15,18 +15,19 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "autoprefixer": "^10.4.21",
     "gatsby": "^5.14.6",
     "gatsby-plugin-postcss": "^6.14.0",
-    "postcss": "^8.5.6",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "tailwindcss": "^4.1.12"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.12",
     "@types/node": "^20.11.19",
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.12",
     "typescript": "^5.3.3"
   }
 }
