--- a/package.json
+++ b/package.json
@@ -15,16 +15,20 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "formik": "^2.4.6",
     "gatsby": "^5.14.6",
     "gatsby-plugin-postcss": "^6.14.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-input-mask": "^2.0.4",
+    "yup": "^1.7.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.12",
     "@types/node": "^20.11.19",
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19",
+    "@types/react-input-mask": "^3.0.6",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.12",
