--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
   "dependencies": {
     "formik": "^2.4.6",
     "gatsby": "^5.14.6",
-    "gatsby-plugin-postcss": "^6.14.0",
+    "gatsby-plugin-image": "^3.14.0",
+    "gatsby-plugin-sharp": "^5.14.0",
+    "gatsby-source-filesystem": "^5.14.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-input-mask": "^2.0.4",
@@ -30,6 +32,7 @@
     "@types/react-dom": "^18.2.19",
     "@types/react-input-mask": "^3.0.6",
     "autoprefixer": "^10.4.21",
+    "gatsby-plugin-postcss": "^6.14.0",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.12",
     "typescript": "^5.3.3"
